# auto_attn

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml  test.yml
autoattn/: auto.py
autoattn.egg-info/: PKG-INFO  SOURCES.txt
autoattn/backends/: dense.py  flash.py  local.py
examples/: simple_transformer.py
